# yaiss

./: .gitignore  Cargo.toml  LICENSE  README.md  configuration.ini  makefile  sqlx-data.json
.github/actions-rs/: grcov.yml
.github/workflows/: pr-workflow.yml
backend/: Cargo.toml
backend/resources/: configuration.ini
backend/sql/: create-db.sh  delete-db.sh
backend/sql/migrations/: 20230711191046_images.down.sql  20230711191046_images.up.sql
backend/src/: lib.rs  state.rs
backend/src/data_storage/images/: images_sqlite_ds.rs
backend/src/server/: mod.rs
backend/src/services/images/: batch_delete_image.rs  delete_image.rs  upload_images.rs
backend/src/services/images/ports/incoming/: delete_image_service.rs
backend/src/services/images/ports/outgoing/: batch_delete_image_port.rs  batch_query_image_port.rs  delete_image_port.rs  insert_image_port.rs  mod.rs
backend/src/web/images/: batch_delete_image_handler.rs  batch_query_image_handler.rs  get_image_content_handler.rs  mod.rs  upload_images_handler.rs
frontend/: Cargo.toml
resources/: dev.configuration.ini
sql/: create-db.sh  delete-db.sh
src/: configuration.rs  error.rs  lib.rs  main.rs  state.rs
src/data_storage/images/: images_sqlite_ds.rs  mod.rs
src/images/: mod.rs
src/images/data_storage/: image_sqlite_ds.rs  images_data_storage.rs  images_sqlite_ds.rs  mod.rs
src/images/services/: batch_delete_image_service.rs  delete_image_service.rs  delete_images_service.rs  mod.rs  upload_images_service.rs
src/images/web/: batch_delete_image_handler.rs  delete_image_handler.rs  delete_images_handler.rs  mod.rs  upload_images_handler.rs
src/server/: mod.rs  server.rs  server_handler.rs
src/services/images/: batch_delete_image.rs  batch_query_image_service.rs  delete_image.rs  delete_image_service.rs  get_image_content_service.rs  mod.rs  query_image_service.rs  (+1 more)
src/web/: mod.rs
(+21 files in other folders)
