[package]
name = "yaiss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
axum = "0.6.18"
axum-server = "0.5.1"
chrono = "0.4.26"
futures = "0.3.28"
notify = "6.0.1"
rust-ini = "0.19"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "offline"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
reqwest = "0.11.18"
rstest = "0.17.0"


[[bin]]
name = "yaiss"
path = "bin/main.rs"