[package]
name = "yaiss-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
axum = { version = "0.6.18", features = ["multipart", "macros", "json"] }
axum-server = "0.5.1"
chrono = "0.4.26"
futures = "0.3.28"
image = "0.24.6"
itertools = "0.11.0"
notify = "6.0.1"
rand = "0.8.5"
rust-ini = "0.19"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.6.3", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "offline",
] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
hyper = { version = "0.14", features = ["full"] }

[dev-dependencies]
reqwest = "0.11.18"
rstest = "0.17.0"
mockall = "0.11.4"
axum-test-helper = "0.3"
tower = { version = "0.4", features = ["util"] }


[[bin]]
name = "yaiss-backend"
path = "bin/main.rs"
